added class Atm and unit tests

--- a/lib/app_component.html
+++ b/lib/app_component.html
@@ -10,7 +10,7 @@
           </div>
           <div class="col-5">
               <label>Ваши деньги:</label>
-              <div *ngFor="let item of resultList">
+              <div id="resultList" *ngFor="let item of atm.list">
                 <span class="emodji">{{item.result}}</span>
               </div>
           </div>
