--- a/lib/app_component.html
+++ b/lib/app_component.html
@@ -1,20 +1,22 @@
-<div class="card">
-  <div class="card-body">
+<div class="card-container">
+  <div class="card">
+    <div class="card-body">
       <div class="container">
-        <div class="row">
-          <div class="col-6">
+        <div class="row justify-content-md-center">
+          <div class="col-4">
             <form>
               <label>Сколько вы хотите снять?</label>
-              <input type="number" min="0" step="1" (keyup)="getValue($event)" class="form-control" placeholder="Введите целое число">
+              <input type="number" min="0" step="1" (keyup)="getValue($event)" class="form-control col-9" placeholder="Введите целое число">
             </form>
           </div>
           <div class="col-5">
               <label>Ваши деньги:</label>
               <div id="resultList" *ngFor="let item of atm.list">
-                <span class="emodji">{{item.result}}</span>
+                <p class="emodji">{{item.result}}</p>
               </div>
           </div>
         </div>
       </div>
+    </div>
   </div>
 </div>
