--- a/lib/app_component.html
+++ b/lib/app_component.html
@@ -11,8 +11,8 @@
           </div>
           <div class="col-5">
               <label>Ваши деньги:</label>
-              <div id="resultList" *ngFor="let item of atm.list">
-                <p class="emodji">{{item.result}}</p>
+              <div id="resultList" *ngFor="let item of result.strings">
+                <p class="emodji">{{item}}</p>
               </div>
           </div>
         </div>
